<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/asfalt_App_Bar"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_launcher_round"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/newyork"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/ic_search_3"
        android:drawableEnd="@drawable/ic_filter"
        android:drawablePadding="15dp"
        android:fontFamily="@font/newyork"
        android:gravity="center_vertical"
        android:hint="@string/filmsSerials"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sf_regular"
        android:text="@string/Genres"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <com.google.android.material.button.MaterialButton
        style="@style/Base.Button"
        android:id="@+id/comedy_btn"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:onClick="onNumberClick"
        android:text="@string/Comedy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        style="@style/Base.Button"
        android:id="@+id/detective_btn"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:onClick="onNumberClick"
        android:text="@string/Detective"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        style="@style/Base.Button"
        android:id="@+id/drame_btn"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="239dp"
        android:onClick="onNumberClick"
        android:text="@string/Drame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        style="@style/Base.Button"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:id="@+id/criminal_btn"
        android:layout_marginStart="18dp"
        android:layout_marginTop="44dp"
        android:onClick="onNumberClick"
        android:text="@string/Criminal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/adviceToLook"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/sf_regular"
        android:text="@string/advice_to_look"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <ImageButton
        android:id="@+id/im_advice"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="18dp"
        android:background="@drawable/rounded_btn"
        android:clickable="true"
        android:contentDescription="TODO"
        android:src="@drawable/im_advice_1"
        app:layout_constraintCircleRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceToLook" />

    <ImageButton
        android:id="@+id/im_advice_1"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="136dp"
        android:background="@drawable/rounded_btn"
        android:clickable="true"
        android:contentDescription="TODO"
        android:src="@drawable/im_advice_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceToLook" />

    <ImageButton
        android:id="@+id/im_advice_2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="254dp"
        android:background="@drawable/rounded_btn"
        android:clickable="true"
        android:contentDescription="TODO"
        android:src="@drawable/im_advice_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceToLook" />

    <ListView
        android:id="@+id/movie_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/categories"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>