<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/asfalt_App_Bar"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

<!--            <ImageView-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:src="@drawable/ic_launcher_round"-->
<!--                tools:ignore="ContentDescription" />-->


            <TextView
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:fontFamily="@font/newyork"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="86dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Добро пожаловать!"
        android:textSize="33sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:gravity="center"
        android:text="Выполните вход \n или зарегистрируйтесь."
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вход"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageProfile"
        android:layout_marginBottom="88dp"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEdit"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/entryEmailProfile"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColorHint="@color/nav_color"
        android:textSize="15sp"
        app:layout_constraintCircleRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text1"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEdit"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_background"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_lock"
        android:hint="@string/entryPassProfile"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColorHint="@color/nav_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        tools:ignore="TextSizeCheck,TextContrastCheck" />


    <Button
        android:id="@+id/entry_button"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/asfalt_App_Bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        android:text="@string/entryProfile"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>