<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck"
    android:paddingBottom="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drame_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dashboard.DashboardFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/asfalt_App_Bar"
                        android:minHeight="?attr/actionBarSize"
                        android:theme="@style/AppTheme">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_launcher_round"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="180sp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/newyork"
                            android:gravity="center"
                            android:text="@string/Drame"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_1"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im"
                        android:layout_width="146dp"
                        android:layout_height="225dp"
                        android:src="@drawable/im_kurmanjan_datka"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/title_kurmanjan_datka"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_2"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im2"
                        android:layout_width="150dp"
                        android:layout_height="225dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/im_belyi_parahod"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/title_belui_parahod"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_3"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comedy_film_1"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im3"
                        android:layout_width="150dp"
                        android:layout_height="225dp"
                        android:src="@drawable/im_materinskoe_pole"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/title_materinskoe_pole"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_4"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comedy_film_2"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im4"
                        android:layout_width="150dp"
                        android:layout_height="225dp"
                        android:src="@drawable/im_pervyi_uchitel"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/title_pervui_uchitel"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_5"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comedy_film_4"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im5"
                        android:layout_width="150dp"
                        android:layout_height="225dp"
                        android:src="@drawable/im_pesnya_dreva"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="@string/title_pesn_dreva"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/comedy_film_6"
                android:layout_width="150dp"
                android:layout_height="246dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comedy_film_4"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/im6"
                        android:layout_width="150dp"
                        android:layout_height="225dp"
                        android:src="@drawable/im_akyrkt_sabak"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tv_title6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:text="Последний урок"
                        android:textSize="12sp"
                        android:fontFamily="@font/sf_medium"
                        android:textColor="@color/black" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>



